Fix style of exercise footer for dark mode

--- a/src/main/webapp/content/scss/themes/_dark-variables.scss
+++ b/src/main/webapp/content/scss/themes/_dark-variables.scss
@@ -316,7 +316,7 @@ $stat-av-sc-legend-best: rgba(40, 164, 40, 1);
 $update-programming-exercise-plan-preview-box-background: transparentize(#fff, 0.95);
 
 // Form Footer
-$update-footer-background: $brighter-body-bg;
+$update-footer-background: $neutral-dark;
 
 // Edit Quiz
 $quiz-mapping-letter-number-mixin-color: white;
